package Protos;

message InputClassifierC {
    required double ltp = 1;
    required double ltd = 2;
}

